--- a/app/src/main/res/menu/base_menu.xml
+++ b/app/src/main/res/menu/base_menu.xml
@@ -22,6 +22,13 @@
             android:icon="@drawable/ic_menu_setting"
             android:orderInCategory="100"
             android:title="@string/action_settings" />
+
+        <item
+            android:id="@+id/action_logout"
+            android:icon="@drawable/ic_menu_setting"
+            android:orderInCategory="100"
+            android:title="@string/action_logout" />
+
     </group>
     <group android:id="@+id/grp2">
         <item
@@ -32,7 +39,7 @@
             android:visible="false" />
         <item
             android:id="@+id/action_restore"
-            android:icon="@drawable/ic_menu_restore"
+            android:icon="@drawable/baseline_logout_24"
             android:orderInCategory="100"
             android:title="@string/action_restore"
 
