--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -4,6 +4,7 @@
     android:id="@+id/layout_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#ADD8E6"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <ScrollView
@@ -17,12 +18,77 @@
             android:layout_marginBottom="4dp"
             android:orientation="vertical">
 
+
+
+            <androidx.cardview.widget.CardView
+                android:background="#808080"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:cardCornerRadius="2dp"
+                app:cardElevation="3dp">
+
+                <LinearLayout
+                    android:background="#ADD8E6"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:padding="8dp">
+
+                        <TextView
+                            android:background="@color/black"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="left"
+                            android:text="@string/spending"
+                            android:textAllCaps="false"
+                            android:textColor="@color/white"
+                            android:textSize="18sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+
+                            android:id="@+id/tv_spending_date"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:gravity="right"
+                            android:paddingRight="4dp"
+                            android:text="Jan 2019"
+                            android:textColor="@color/white"/>
+                    </LinearLayout>
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="8dp">
+
+                    <!-- Background image for the pie chart -->
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp"
+                        android:src="@drawable/img1"
+                        android:scaleType="fitXY" />
+
+                    <com.github.mikephil.charting.charts.PieChart
+                        android:id="@+id/pie_chart"
+                        android:layout_width="match_parent"
+                        android:layout_height="200dp" />
+                    </RelativeLayout>
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <androidx.cardview.widget.CardView
+                    android:background="@color/black"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
@@ -31,6 +97,7 @@
                     app:cardElevation="4dp">
 
                     <LinearLayout
+                        android:background="@color/black"
                         android:id="@+id/layout_main_imcome"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
@@ -56,6 +123,7 @@
                                 android:id="@+id/tv_income_type"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:textColor="@color/white"
                                 android:text="@string/tv_today" />
 
                             <TextView
@@ -63,8 +131,9 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:singleLine="true"
+                                android:textColor="@color/white"
                                 android:text="+$1525"
-                                android:textColor="@color/edit_textcolor"
+
                                 android:textSize="18sp"
                                 android:textStyle="bold" />
                         </LinearLayout>
@@ -87,7 +156,8 @@
                         android:layout_margin="4dp"
                         android:gravity="center"
                         android:orientation="horizontal"
-                        android:padding="8dp">
+                        android:padding="8dp"
+                        android:background="@color/black">
 
                         <ImageView
                             android:layout_width="40dp"
@@ -105,6 +175,7 @@
                                 android:id="@+id/tv_expense_type"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:textColor="@color/white"
                                 android:text="@string/tv_today" />
 
                             <TextView
@@ -113,59 +184,13 @@
                                 android:layout_height="wrap_content"
                                 android:singleLine="true"
                                 android:text="+$1525"
-                                android:textColor="@color/edit_textcolor"
+                                android:textColor="@color/white"
                                 android:textSize="18sp"
                                 android:textStyle="bold" />
                         </LinearLayout>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
             </LinearLayout>
-
-            <androidx.cardview.widget.CardView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                app:cardCornerRadius="2dp"
-                app:cardElevation="3dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:padding="8dp">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:gravity="left"
-                            android:text="@string/spending"
-                            android:textAllCaps="false"
-                            android:textColor="@color/black"
-                            android:textSize="18sp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/tv_spending_date"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:gravity="right"
-                            android:paddingRight="4dp"
-                            android:text="Jan 2019" />
-                    </LinearLayout>
-
-                    <com.github.mikephil.charting.charts.PieChart
-                        android:id="@+id/pie_chart"
-                        android:layout_width="match_parent"
-                        android:layout_height="200dp" />
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
@@ -176,25 +201,29 @@
                 app:cardElevation="3dp">
 
                 <LinearLayout
+                    android:background="@color/black"
                     android:id="@+id/layout_recent"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
                     <LinearLayout
+                        android:background=" #ADD8E6
+"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
                         android:padding="8dp">
 
                         <TextView
+                            android:background="@color/black"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:gravity="left"
                             android:text="@string/recent_transaction"
                             android:textAllCaps="false"
-                            android:textColor="@color/black"
+                            android:textColor="@color/white"
                             android:textSize="18sp"
                             android:textStyle="bold" />
 
@@ -204,6 +233,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="3"
                             android:gravity="right"
+                            android:textColor="@color/white"
                             android:paddingRight="4dp"
                             android:text="@string/view_all" />
                     </LinearLayout>
@@ -212,8 +242,11 @@
                         android:id="@+id/list_recent_tran"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textColor="@color/lightGrey"
                         android:scrollbars="vertical"
-                        android:visibility="visible" />
+
+                        android:background="@drawable/semi_transparent_background"
+                         />
 
                     <TextView
                         android:id="@+id/tv_notransaction"
@@ -247,6 +280,7 @@
                     android:orientation="vertical">
 
                     <LinearLayout
+                        android:background="#ADD8E6"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
@@ -259,7 +293,8 @@
                             android:gravity="left"
                             android:text="@string/spending_limit"
                             android:textAllCaps="false"
-                            android:textColor="@color/black"
+                            android:background="@color/black"
+                            android:textColor="@color/white"
                             android:textSize="18sp"
                             android:textStyle="bold" />
 
@@ -270,6 +305,7 @@
                             android:layout_weight="1"
                             android:gravity="right"
                             android:paddingRight="4dp"
+                            android:textColor="@color/white"
                             android:text="@string/view_all" />
                     </LinearLayout>
 
@@ -279,6 +315,8 @@
                         android:layout_height="wrap_content"
                         android:minHeight="200dp"
                         android:scrollbars="vertical"
+                        android:textColor="@color/white"
+                        android:background="@drawable/img1"
                         android:visibility="visible" />
 
                     <TextView
