--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -11,15 +11,32 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="98dp"
+        android:layout_height="62dp"
         android:contentDescription="@string/nav_header_desc"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         app:srcCompat="@drawable/icon200" />
 
+        <TextView
+
+            android:id="@+id/my_text"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="TE-B MINI PROJECT"
+            android:textColor="@color/black1"
+            android:textSize="25dp"
+            android:textStyle="bold"
+            android:textAlignment="gravity"
+            />
+
+
+    </LinearLayout>
     <TextView
         android:id="@+id/tv_username"
         android:layout_width="match_parent"
@@ -38,4 +55,6 @@
         android:padding="6dp"
         android:text="@string/nav_header_subtitle"
         android:textColor="@color/black" />
+
+
 </LinearLayout>
