--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="lightGrey">#D3D3D3</color>
     <color name="colorAccent">#00c853</color>
     <color name="colorPrimary">#f5f5f5</color>
     <color name="colorPrimaryDark">#eeeeee</color>
